<resources>
    <string name="app_name">CourseProject</string>
    <string name="course_text_view"></string>
    <string name="course_total_fees_text_view"></string>
    <string name="course_total_fees_button">Total Course Fees</string>
    <string name="course_next_button">Next Course</string>
    <string name="course_detail_button">Course Details</string>
    <string name="course_no_edit_text">Enter Course No</string>
    <string name="course_name_edit_text">Enter Course Name</string>
    <string name="course_max_enrl_edit_text">Enter Course Max Enroll</string>
    <string name="course_credit_edit_text">Enter Course Credit</string>
    <string name="course_update_button">Course Update</string>
</resources>