<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/course_text_view"
        android:layout_width="267dp"
        android:layout_height="50dp"
        android:text="@string/course_text_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.187" />

    <TextView
        android:id="@+id/course_total_fees_text_view"
        android:layout_width="267dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/course_total_fees_text_view"
        app:layout_constraintEnd_toEndOf="@+id/course_text_view"
        app:layout_constraintStart_toStartOf="@+id/course_text_view"
        app:layout_constraintTop_toBottomOf="@+id/course_text_view" />

    <Button
        android:id="@+id/course_total_fees_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/course_total_fees_button"
        app:layout_constraintEnd_toEndOf="@+id/course_total_fees_text_view"
        app:layout_constraintStart_toStartOf="@+id/course_total_fees_text_view"
        app:layout_constraintTop_toBottomOf="@+id/course_total_fees_text_view" />

    <Button
        android:id="@+id/course_next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/course_next_button"
        app:layout_constraintEnd_toEndOf="@+id/course_total_fees_button"
        app:layout_constraintStart_toStartOf="@+id/course_total_fees_button"
        app:layout_constraintTop_toBottomOf="@+id/course_total_fees_button" />

    <Button
        android:id="@+id/course_detail_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/course_detail_button"
        app:layout_constraintEnd_toEndOf="@+id/course_next_button"
        app:layout_constraintStart_toStartOf="@+id/course_next_button"
        app:layout_constraintTop_toBottomOf="@+id/course_next_button" />

</androidx.constraintlayout.widget.ConstraintLayout>