<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CourseActivity">

    <EditText
        android:id="@+id/course_no_edit_text"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/course_no_edit_text"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.179" />

    <EditText
        android:id="@+id/course_name_edit_text"
        android:hint="@string/course_name_edit_text"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/course_no_edit_text"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/course_no_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/course_no_edit_text" />

    <EditText
        android:id="@+id/course_max_enrl_edit_text"
        android:hint="@string/course_max_enrl_edit_text"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/course_name_edit_text"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/course_name_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/course_name_edit_text" />

    <EditText
        android:id="@+id/course_credit_edit_text"
        android:hint="@string/course_credit_edit_text"
        android:autofillHints=""
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/course_max_enrl_edit_text"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/course_max_enrl_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/course_max_enrl_edit_text" />

    <Button
        android:id="@+id/course_update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/course_update_button"
        app:layout_constraintEnd_toEndOf="@+id/course_credit_edit_text"
        app:layout_constraintStart_toStartOf="@+id/course_credit_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/course_credit_edit_text" />
</androidx.constraintlayout.widget.ConstraintLayout>